--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>checkmate</title>
+    <title>Checkmate Speed Dating</title>
+    <link rel="shortcut icon" href="/src/assets/logo.png">
   </head>
   <body>
     <div id="app"></div>
